Day 01 /app/k8s/backend.yaml
apiVersion: v1
kind: Service
metadata:
    name: backend
    labels:
        app: backend
        version: v1
spec:
    selector:
        app: backend
    ports:
        - port: 5000
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    labels:
        app: backend
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: backend
            version: v1
    template:
        metadata:
            labels:
                app: backend
                version: v1
        spec:
            containers:
                - name: backend
                  image: backend:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 5000
