Day 01 /app/k8s/frontend.yaml
apiVersion: v1
kind: Service
metadata:
    name: frontend
    labels:
        app: frontend
        version: v1

spec:
    selector:
        app: frontend
    ports:
        - port: 8080
          name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    labels:
        app: frontend
        version: v1

spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
                version: v1
        spec:
            containers:
                - name: frontend
                  image: frontend:latest
                  imagePullPolicy: Never
                  ports:
                      - containerPort: 8080
