Day 01 /app/k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
    name: app-gateway
spec:
    selector:
        istio: ingressgateway
    servers:
        - port:
              number: 80
              name: http
              protocol: HTTP
          hosts:
              - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
    name: app-virtualservice
spec:
    hosts:
        - "*"
    gateways:
        - app-gateway
    http:
        - match:
              - uri:
                    prefix: /
          route:
              - destination:
                    host: frontend
                    port:
                        number: 8080
